Fix media kit page design text to be more readable

--- a/src/app/media/media.scss
+++ b/src/app/media/media.scss
@@ -2,7 +2,8 @@
 
 
 	.media-about{
-		background: url('/background/starsplatter.png');
+		background: url('/background/starsplatter.png'),rgba(0, 0, 0, 0.258);
+		background-blend-mode: multiply;
 		border-bottom: 4px solid #DC79FF;
 
 		display: grid;
@@ -14,11 +15,39 @@
 			// align-items: center;
 			justify-content: center;
 			flex-direction: column;
-			padding: 3em;
+			padding: 7em 3em;
+			gap: 1em;
 			.title{
 				font-size: 2.5rem;
 				color: #DC79FF;
 
+			}
+			.about{
+				font-size: 1rem;
+				line-height: 130%;
+				opacity: 0.9;
+				text-shadow: 2px 2px 5px black;
+				u{
+					text-underline-offset: 5px;
+				}
+				b{
+					font-weight: 700;
+				}
+				.bright{
+					color: #ff79c7;
+				}
+				.magenta{
+					color: magenta;
+				}
+				.games{
+					color: #f64a7b;
+				}
+				.advocate,.green{
+					color: #268a84;
+				}
+				.business{
+					color: #52FF00;
+				}
 			}
 
 		}
@@ -42,7 +71,7 @@
 
 				max-width: 100%;
 				left: 2%;
-				bottom: 0%;
+				bottom: 15%;
 				scale: .8;
 			}
 			
